k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dorm
  labels:
    app.kubernetes.io/part-of: dorm-manager
